Added Image Resources.
Image resources now added.

--- a/MobileAppUI/MobileAppUI/MobileAppUI/MainPage.xaml
+++ b/MobileAppUI/MobileAppUI/MobileAppUI/MainPage.xaml
@@ -14,6 +14,7 @@
         <Label Text="Welcome to Xamarin Forms! (Avenir Medium)" FontFamily="{StaticResource BoldFont}" />
         <Label Text="Welcome to Xamarin Forms! (Avenir Medium)" FontFamily="{StaticResource NormalFont}" />
         <Label Text="Welcome to Xamarin Forms! (Default)" />
+        <Image Source="action_needed.png" />
     </StackLayout>
 
 </ContentPage>
