--- a/MobileAppUI/MobileAppUI/MobileAppUI/TOU.xaml
+++ b/MobileAppUI/MobileAppUI/MobileAppUI/TOU.xaml
@@ -1,11 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MobileAppUI.TOU" NavigationPage.HasNavigationBar="False">
-    <ContentPage.Content>
-        <StackLayout Padding="10,10,10,5">
-            <Label Text="TERMS OF USE "     FontFamily="{StaticResource NormalFont}"         
-                HorizontalOptions="StartAndExpand" />
+             x:Class="MobileAppUI.TOU" NavigationPage.HasNavigationBar="False"
+             BackgroundImage="background_image_cropped.png">
+    <Grid Padding="10" HorizontalOptions="FillAndExpand">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="1" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <Label Grid.Row="0" Text="TERMS OF USE" FontAttributes="Bold" TextColor="#ffffff" FontSize="18" FontFamily="{StaticResource HeavyFont}" />
+        <Label Grid.Row="1" x:Name="tosText" FontAttributes="Bold" TextColor="#ffffff" FontSize="12" FontFamily="{StaticResource HeavyFont}" />
+        <BoxView Grid.Row="2" HorizontalOptions="FillAndExpand" HeightRequest="1" Color="#e5dace" />
+        <StackLayout Grid.Row="3" Orientation="Horizontal">
+            <Button x:Name="denyButton" Text="Deny" BackgroundColor="#e9a590" TextColor="#ffffff" FontSize="14" FontFamily="{StaticResource NormalFont}" />
+            <Button x:Name="agreeButton" Text="Agree" BackgroundColor="#e9a590" TextColor="#ffffff" FontSize="14" FontFamily="{StaticResource NormalFont}" />
         </StackLayout>
-    </ContentPage.Content>
+    </Grid>
 </ContentPage>
