--- a/MobileAppUI/MobileAppUI/MobileAppUI/SalonsList.xaml
+++ b/MobileAppUI/MobileAppUI/MobileAppUI/SalonsList.xaml
@@ -2,12 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileAppUI.SalonsList"
-            BackgroundColor="Black"
+          NavigationPage.HasNavigationBar="False"
              >
     <ContentPage.Content>
-        <StackLayout BackgroundColor="Black">
-            <StackLayout Orientation="Vertical">
-                <Label Text="MY SALONS" TextColor="White"/>
+       
+            <StackLayout Orientation="Vertical" BackgroundColor="Black">
+                <Label Text="MY SALONS" TextColor="White" HorizontalOptions="CenterAndExpand" FontSize="18" FontFamily=" Avenir Heavy"/>
 
                 <SearchBar Placeholder="Search" PlaceholderColor="White" FontFamily="{StaticResource HeavyFont}" TextChanged="SearchBar_TextChanged" FontSize="14"
                        BackgroundColor="LightGray" Margin="10" WidthRequest="20" />
@@ -15,7 +15,7 @@
                       IsPullToRefreshEnabled="True"
                       HasUnevenRows="True"
                       Refreshing="ListOfSalons_Refreshing"
-                      ItemSelected="ListOfSalons_ItemSelected" BackgroundColor="LightSlateGray">
+                      ItemSelected="ListOfSalons_ItemSelected" BackgroundColor="WhiteSmoke">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
@@ -44,7 +44,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-        </StackLayout>
+       
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
