--- a/MobileAppUI/MobileAppUI/MobileAppUI/SalonsList.xaml
+++ b/MobileAppUI/MobileAppUI/MobileAppUI/SalonsList.xaml
@@ -7,12 +7,12 @@
     <ContentPage.Content>
        
             <StackLayout Orientation="Vertical" BackgroundColor="Black">
-            <StackLayout Orientation="Horizontal" Padding="0,30,0,5">
+            <StackLayout Orientation="Horizontal" Padding="0,30,10,10">
                 <Label Text="MY SALONS" TextColor="White" HorizontalOptions="CenterAndExpand" FontSize="18" FontFamily=" Avenir Heavy " />
-                <Image Source="menu_3.jpg" HorizontalOptions="EndAndExpand"/>
+                <Image Source="menu_3.jpg" HorizontalOptions="End" />
             </StackLayout>
                 <SearchBar Placeholder="Search" PlaceholderColor="White" FontFamily="{StaticResource HeavyFont}" TextChanged="SearchBar_TextChanged" FontSize="14"
-                       BackgroundColor="LightGray" Margin="10" WidthRequest="20" />
+                       BackgroundColor="LightGray" Margin="10"  WidthRequest="10" MinimumWidthRequest="20" />
            
             <ListView x:Name="ListOfSalons"
                       IsPullToRefreshEnabled="True"
